--- a/csharp_lib/IndexerLibWrapper.csproj
+++ b/csharp_lib/IndexerLibWrapper.csproj
@@ -20,5 +20,6 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Docnet.Core" Version="2.6.0" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
   </ItemGroup>
 </Project>
