fix: Update build script and project configuration
- Simplified build.bat to build IndexerLib sources directly with wrapper
- Updated IndexerLibWrapper.csproj to include IndexerLib sources instead of referencing external DLL
- Excluded Deletion.cs which depends on System.Windows.Forms
- Fixed duplicate compile items error
- Updated README with simplified build instructions
- All tests passing successfully

--- a/csharp_lib/IndexerLibWrapper.csproj
+++ b/csharp_lib/IndexerLibWrapper.csproj
@@ -7,19 +7,20 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PublishAot>true</PublishAot>
     <InvariantGlobalization>false</InvariantGlobalization>
+    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
   </PropertyGroup>
-
-  <ItemGroup>
-    <!-- Reference the original IndexerLib -->
-    <Reference Include="IndexerLib">
-      <HintPath>..\..\Indexer\IndexerLib\bin\Release\IndexerLib.dll</HintPath>
-    </Reference>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Docnet.Core" Version="2.6.0" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- Include the wrapper file -->
+    <Compile Include="IndexerLibWrapper.cs" />
+    <!-- Include all IndexerLib source files directly -->
+    <Compile Include="IndexerLib\**\*.cs" Exclude="IndexerLib\obj\**;IndexerLib\bin\**;IndexerLib\Properties\AssemblyInfo.cs;IndexerLib\Index\Deletion.cs" />
   </ItemGroup>
 </Project>
